submission/feedback-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-feedback-api
  labels:
    app: feedback-api
  annotations:
    promtail: "enabled"
spec:
  selector:
    matchLabels:
      app: feedback-api
  replicas: 2
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      containers:
        - name: feedback-api
          image: glo7008/feedback-api:submission
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 40
            periodSeconds: 10
          volumeMounts:
            - name: feedback-pv
              mountPath: /app/Database
      volumes:
        - name: feedback-pv
          persistentVolumeClaim:
            claimName: feedback-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: srv-feedback-api
spec:
  selector:
    app: feedback-api
  ports:
    - port: 9000
      targetPort: 80
