submission/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: logging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
