submission/logic-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-logic-api
  labels:
    app: logic-api
  annotations:
    promtail: "enabled"
spec:
  selector:
    matchLabels:
      app: logic-api
  replicas: 2
  template:
    metadata:
      labels:
        app: logic-api
    spec:
      containers:
        - name: logic-api
          image: glo7008/logic-api:submission
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 40
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: srv-logic-api
spec:
  selector:
    app: logic-api
  ports:
    - port: 5000
      targetPort: 5000
