submission/loki-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: default
spec:
  ports:
  - port: 3100
    targetPort: 3100
    protocol: TCP
  selector:
    app: loki
