submission/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-frontend
  labels:
    app: frontend
  annotations:
    promtail: "enabled"
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
      annotations:  # Ajout des annotations ici
        promtail: "enabled"    
    spec:
      containers:
        - name: frontend
          image: glo7008/frontend:submission
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: srv-frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    #cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: frontend-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific 
            backend:
              service:
                name: srv-frontend
                port:
                  number: 80
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: srv-api-gateway
                port:
                  number: 8080
          - path: /analyze/sentence
            pathType: Prefix
            backend:
              service:
                name: srv-logic-api
                port:
                  number: 5000
          - path: /admin/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: srv-feedback-api
                port:
                  number: 9000
